tests/paczka1/fuzzy1/78893619.err
Error in line 1: NTR9 S930 75,2
Error in line 6: A63 S843 39,8
Error in line 24: jb9cpO23x S930 15,2
Error in line 19: mMynLw S930 62,1
